--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,7 @@
-
-
+## PostgreSQL
+spring.datasource.url=jdbc:postgresql://localhost:5432/jubilant-disco
+spring.datasource.username=postgres
+spring.datasource.password=localhost
+#drop n create table again, good for testing, comment this in production
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
