--- a/pom.xml
+++ b/pom.xml
@@ -14,10 +14,12 @@
     <name>writerpad</name>
     <description>Demo project for Spring Boot</description>
 
-    <properties>
-        <java.version>1.8</java.version>
-    </properties>
 
+    <properties>
+            <maven.compiler.source>1.8</maven.compiler.source>
+            <maven.compiler.target>1.8</maven.compiler.target>
+            <spring.version>5.2.1.RELEASE</spring.version>
+        </properties>
 
     <dependencies>
         <dependency>
