--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
-### PostgreSQL
-#spring.datasource.url=jdbc:postgresql://localhost:5432/jubilant-disco
+# PostgreSQL
+##spring.datasource.url=jdbc:postgresql://localhost:5432/jubilant-disco
+#spring.datasource.url=jdbc:postgresql://localhost:5432/writerpad
 #spring.datasource.username=postgres
 #spring.datasource.password=localhost
 ##drop n create table again, good for testing, comment this in production
