--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,6 @@
 ##drop n create table again, good for testing, comment this in production
 #spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.show-sql=true
+
+# H2 Console
+spring.h2.console.enable=true
