--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,14 @@
 
 # H2 Console
 spring.h2.console.enable=true
+
+
+spring.main.banner-mode=off
+
+spring.mail.protocol=smtp
+spring.mail.host=smtp.mailtrap.io
+spring.mail.port=2525
+spring.mail.username=supreetsingh106@gmail.com
+spring.mail.password=Supreet@106
+spring.mail.properties.mail.smtp.auth = true
+spring.mail.properties.mail.smtp.starttls.enable = true
