Day 03 stories added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,12 +11,12 @@
 spring.h2.console.enable=true
 
 
-spring.main.banner-mode=off
+#spring.main.banner-mode=off
 
-spring.mail.protocol=smtp
-spring.mail.host=smtp.mailtrap.io
-spring.mail.port=2525
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
 spring.mail.username=supreetsingh106@gmail.com
-spring.mail.password=Supreet@106
+spring.mail.password=supreet106
 spring.mail.properties.mail.smtp.auth = true
 spring.mail.properties.mail.smtp.starttls.enable = true
