--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,6 +17,6 @@ spring.h2.console.enable=true
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=supreetsingh106@gmail.com
-spring.mail.password=supreet106
+spring.mail.password=xxxxxxxx
 spring.mail.properties.mail.smtp.auth = true
 spring.mail.properties.mail.smtp.starttls.enable = true
