Day 03 code refactored

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,10 +13,12 @@ spring.h2.console.enable=true
 
 #spring.main.banner-mode=off
 
-
+email.receiver=supreet.singh@xebia.com
+email.subject=Congratulations
+email.body=You blog is published.
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=supreetsingh106@gmail.com
-spring.mail.password=xxxxxxxx
+spring.mail.password=gpdzfxdquydicvdj
 spring.mail.properties.mail.smtp.auth = true
 spring.mail.properties.mail.smtp.starttls.enable = true
