--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,3 +22,5 @@ spring.mail.username=supreetsingh106@gmail.com
 spring.mail.password=gpdzfxdquydicvdj
 spring.mail.properties.mail.smtp.auth = true
 spring.mail.properties.mail.smtp.starttls.enable = true
+
+averageTimeToRead=225
