--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,7 +18,7 @@ email.subject=Congratulations
 email.body=You blog is published.
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=supreetsingh106@gmail.com
+spring.mail.username=supreetsingh10@gmail.com
 spring.mail.password=gpdzfxdquydicvdj
 spring.mail.properties.mail.smtp.auth = true
 spring.mail.properties.mail.smtp.starttls.enable = true
