--- a/pom.xml
+++ b/pom.xml
@@ -37,21 +37,21 @@
             <artifactId>hashids</artifactId>
             <version>1.0.3</version>
         </dependency>
-<!--                <dependency>-->
-<!--                    <groupId>org.postgresql</groupId>-->
-<!--                    <artifactId>postgresql</artifactId>-->
-<!--                    <version>42.2.8</version>-->
-<!--                </dependency>-->
         <dependency>
-            <groupId>com.h2database</groupId>
-            <artifactId>h2</artifactId>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>42.2.8</version>
         </dependency>
+        <!--        <dependency>-->
+        <!--            <groupId>com.h2database</groupId>-->
+        <!--            <artifactId>h2</artifactId>-->
+        <!--        </dependency>-->
 
         <dependency>
-             <groupId>org.assertj</groupId>
-             <artifactId>assertj-core</artifactId>
-             <version>3.11.1</version>
-             <scope>test</scope>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-core</artifactId>
+            <version>3.11.1</version>
+            <scope>test</scope>
         </dependency>
 
         <dependency>
@@ -137,6 +137,13 @@
                     </execution>
                 </executions>
             </plugin>
+
+            <plugin>
+                <groupId>com.heroku.sdk</groupId>
+                <artifactId>heroku-maven-plugin</artifactId>
+                <version>2.0.13</version>
+            </plugin>
+
         </plugins>
     </build>
 </project>
