--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,11 @@
 # PostgreSQL
 #spring.datasource.url=jdbc:postgresql://localhost:5432/jubilant-disco
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.datasource.maxActive=10
+spring.datasource.maxIdle=5
+spring.datasource.minIdle=2
+spring.datasource.initialSize=5
+spring.datasource.removeAbandoned=true
 spring.datasource.url=jdbc:postgresql://localhost:5432/writerpad
 spring.datasource.username=postgres
 spring.datasource.password=localhost
