--- a/pom.xml
+++ b/pom.xml
@@ -146,11 +146,11 @@
                 </executions>
             </plugin>
 
-            <plugin>
-                <groupId>com.heroku.sdk</groupId>
-                <artifactId>heroku-maven-plugin</artifactId>
-                <version>2.0.13</version>
-            </plugin>
+<!--            <plugin>-->
+<!--                <groupId>com.heroku.sdk</groupId>-->
+<!--                <artifactId>heroku-maven-plugin</artifactId>-->
+<!--                <version>2.0.13</version>-->
+<!--            </plugin>-->
 
         </plugins>
     </build>
