--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,7 +14,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
 # H2 Console
-spring.h2.console.enable=true
+#spring.h2.console.enable=true
 
 
 #spring.main.banner-mode=off
