--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,9 +8,9 @@ spring.datasource.initialSize=5
 spring.datasource.removeAbandoned=true
 
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.datasource.url=jdbc:postgresql://localhost:5432/writerpad
-spring.datasource.username=postgres
-spring.datasource.password=localhost
+#spring.datasource.url=jdbc:postgresql://localhost:5432/writerpad
+#spring.datasource.username=postgres
+#spring.datasource.password=localhost
 #drop n create table again, good for testing, comment this in production
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
