--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -33,4 +33,4 @@ spring.mail.password=gpdzfxdquydicvdj
 spring.mail.properties.mail.smtp.auth = true
 spring.mail.properties.mail.smtp.starttls.enable = true
 
-averageTimeToRead=225
+average.words.per.minute=225
